# gikWBC9DOF

./: .gitignore  1_pull_world_scaled.json  ALGORITHM_IMPROVEMENT_PLAN.md  ANALYSIS_FINDINGS.md  ANIMATION_GENERATION_GUIDE.md  ANIMATION_SYNC_FIX.md  ARM64_SOLVER_HANG_ISSUE.md  BASE_VELOCITY_IMPLEMENTATION.md  BUILD_SYSTEM_SESSION_SUMMARY.md  CHASSIS_CONTROL_ANALYSIS.md  CHASSIS_INTEGRATION_HYBRID_ASTAR.md  CLASS_BASED_ARCHITECTURE_FIX.md  CODEGENCC45_PROJECT_PLAN.md  CODEGEN_AUDIT.md  CODEGEN_CLEANUP.md  CODEGEN_SUCCESS_SUMMARY.md  CODEGEN_VERIFICATION_DECISION.md  COMMAND_REFERENCE.m  COMPLETE_SOLUTION_PLAN.md  COMPREHENSIVE_STUDY_GUIDE.md  CONFIG_COMPARISON_ANALYSIS.md  CONTEXT_HANDOFF.md  COPY_PASTE_PLANNER_CODEGEN.sh  DATA_FLOW_ANALYSIS.m  DAY1_SESSION_SUMMARY.md  DAY5_CODEGEN_SESSION_SUMMARY.md  DEFAULTS_UNIFIED_SUMMARY.md  DEPLOYMENT_PACKAGE_INFO.md  DEPLOYMENT_SCRIPTS_SUMMARY.md  DEPLOYMENT_SCRIPT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_ORIN_GUIDE.md  DOCUMENTATION_MAP.md  FAST_TRACK_2DAY.md  FRONT_DIFF_REAR_PASSIVE_KINEMATICS.md  FUNCTION_RENAME_SUMMARY.md  GIK_20CONSTRAINTS_CODEGEN_SUCCESS.md  GIK_CODEGEN_ANALYSIS.md  GIK_CODEGEN_REGENERATION_PLAN.md  GIK_CODE_UPDATE.md  (+175 more)
codegen/trajectory_smoothing/: CMakeLists.txt  codedescriptor.dmr  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  smoothTrajectoryVelocity.cpp  smoothTrajectoryVelocity.h  smoothTrajectoryVelocity_types.h
codegen/trajectory_smoothing/examples/: main.cpp  main.h
codegen/trajectory_smoothing/html/: report.mldatx
codegen/trajectory_smoothing/interface/: _coder_smoothTrajectoryVelocity_api.cpp  _coder_smoothTrajectoryVelocity_api.h  _coder_smoothTrajectoryVelocity_info.cpp  _coder_smoothTrajectoryVelocity_info.h  _coder_smoothTrajectoryVelocity_mex.cpp  _coder_smoothTrajectoryVelocity_mex.h
matlab/codegen/purepursuit_arm64/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  purePursuitVelocityController.cpp  purePursuitVelocityController.h  purePursuitVelocityController_data.h  purePursuitVelocityController_initialize.cpp  purePursuitVelocityController_initialize.h  purePursuitVelocityController_terminate.cpp  purePursuitVelocityController_terminate.h  purePursuitVelocityController_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
matlab/codegen/purepursuit_arm64/examples/: main.cpp  main.h
matlab/codegen/purepursuit_arm64/html/: report.mldatx
matlab/codegen/purepursuit_arm64/interface/: _coder_purePursuitVelocityController_api.cpp  _coder_purePursuitVelocityController_api.h  _coder_purePursuitVelocityController_info.cpp  _coder_purePursuitVelocityController_info.h  _coder_purePursuitVelocityController_mex.cpp  _coder_purePursuitVelocityController_mex.h
ros2/gik9dof_controllers/: CMakeLists.txt  README.md  package.xml
ros2/gik9dof_controllers/include/gik9dof_controllers/: gik_solver_wrapper.hpp  unified_chassis.hpp
ros2/gik9dof_controllers/launch/: chassis_path_follower_launch.py
ros2/gik9dof_controllers/src/: chassis_path_follower_node.cpp  holistic_controller.cpp  obstacle_provider.cpp  staged_controller.cpp  trajectory_manager.cpp  unified_chassis.cpp
ros2/gik9dof_msgs/: CMakeLists.txt  package.xml
ros2/gik9dof_msgs/msg/: EndEffectorTrajectory.msg  PlannerDiagnostics.msg  SolverDiagnostics.msg
ros2/gik9dof_solver/: CMakeLists.txt  README.md  package.xml
ros2/gik9dof_solver/config/: gik9dof_solver.yaml  gik9dof_solver_params.yaml  gik_solver_params.yaml
ros2/gik9dof_solver/include/: emmintrin.h  tmwtypes.h
ros2/gik9dof_solver/include/gik9dof_solver/: solver_wrapper.hpp
ros2/gik9dof_solver/include/purepursuit/: purePursuitVelocityController.h  purePursuitVelocityController_data.h  purePursuitVelocityController_initialize.h  purePursuitVelocityController_terminate.h  purePursuitVelocityController_types.h
ros2/gik9dof_solver/include/shared_robotics/: collisioncodegen_checkCollision_api.hpp
ros2/gik9dof_solver/include/trajectory_smoothing/: rtGetInf.h  rt_nonfinite.h  rtwtypes.h  smoothTrajectoryVelocity.h  smoothTrajectoryVelocity_types.h
ros2/gik9dof_solver/include/velocity_controller/: holisticVelocityController.h  holisticVelocityController_terminate.h  rtwtypes.h
ros2/gik9dof_solver/include/velocity_smoothing/: rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  smoothVelocityCommand.h  smoothVelocityCommand_types.h
ros2/gik9dof_solver/launch/: test_solver.launch.py
ros2/gik9dof_solver/matlab_codegen/include/: CharacterVector.cpp  CoderTimeAPI.cpp  CoderTimeAPI.h  CollisionGeometry.cpp  CollisionGeometry.h  CollisionSet.cpp  CollisionSet.h  DistanceBoundsConstraint.cpp  DistanceBoundsConstraint.h  ErrorDampedLevenbergMarquardt.cpp  ErrorDampedLevenbergMarquardt.h  FastVisualizationHelper.cpp  FastVisualizationHelper.h  GIKProblem.cpp  GIKProblem.h  GIKSolver.cpp  GIKSolver.h  JointPositionBounds.cpp  JointPositionBounds.h  KinematicConstraint.cpp  KinematicConstraint.h  PoseTarget.cpp  PoseTarget.h  RigidBody.cpp  RigidBody.h  RigidBodyTree.cpp  RigidBodyTree.h  SystemTimeProvider.cpp  SystemTimeProvider.h  buildRobotForCodegen.cpp  ccd_ccd_export.h  ccd_compiler.h  ccd_quat.h  ccd_vec3.c  codedescriptor.dmr  collisioncodegen_ccdExtensions.hpp  collisioncodegen_util.hpp  constraintDistanceBounds.cpp  constraintDistanceBounds.h  constraintJointBounds.cpp  (+86 more)
ros2/gik9dof_solver/matlab_codegen/include_backup_20251009_130628/: CharacterVector.cpp  CharacterVector.h  (+15 more)
ros2/gik9dof_solver/scripts/: camera_traj_world.json  publish_control.py  test_mock_inputs.py
ros2/gik9dof_solver/src/: coder_posix_time_stubs.cpp  collisioncodegen_stubs.cpp  gik9dof_solver_node.cpp  gik9dof_solver_node.h  solver_wrapper.cpp  stage_b_chassis_plan.cpp  stage_b_chassis_plan.hpp  stage_b_factory.hpp
test_cpp/: CMakeLists.txt  README.md  START_HERE_WSL.md  WSL_QUICKSTART.md  build.ps1  build_wsl.sh  gik_test_utils.h  run_tests_wsl.ps1  test_gik_20constraints.cpp
test_cpp/build_wsl/: CMakeCache.txt  Makefile  cmake_install.cmake
(+1513 files in other folders)
