<?xml version="1.0"?>
<package format="3">
  <name>gik9dof_controllers</name>
  <version>0.1.0</version>
  <description>ROS 2 controllers that integrate the MATLAB-generated GIK 9 DoF solver.</description>
  <maintainer email="placeholder@example.com">GIK Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>gik9dof_solver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
